add test file to test the api

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,10 @@
   "dependencies": {
     "@vitalets/google-translate-api": "^7.0.0",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "supertest": "^6.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
