--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "mongoose": "^6.1.8",
+    "mysql": "^2.18.1",
     "node-cache": "^5.1.2",
     "supertest": "^6.2.2"
   },
